@@ -68,9 +68,17 @@ namespace System.Web
 
 		public override string Get (string name)
 		{
-			LoadInfo ();
-			if (!_loaded)			
-				return InternalGet (name);						
+			if (!_loaded) {
+#if TARGET_JVM
+				return InternalGet (name);
+#else
+				string s = InternalGet (name);
+				if (s != null && s.Length > 0)
+					return s;
+
+				LoadInfo ();
+#endif
+			}
 				
 			return base.Get (name);		
 		}
