@@ -1,3 +1,8 @@
+2007-05-08  Vladimir Krasnov  <vladimirk@mainsoft.com>
+
+	* BaseParamsCollection.cs: fixed Get(string) property, fixed collection
+	lazy initialization
+
 2007-05-03 Igor Zelmanovich <igorz@mainsoft.com>
 
 	* BrowserCapabilities.cs:
